# pdf-translator

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-15-pdf-translator-implementation.md
docs/superpowers/specs/: 2026-06-15-pdf-translator-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ApiConfig.tsx  DirectionToggle.tsx  DropZone.tsx  FileInfo.tsx  ProgressBar.tsx  TranslateButton.tsx
src/hooks/: useTranslation.ts
src/services/: pdf.ts  translator.ts
src/types/: index.ts
